--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *tar.gz filter=lfs diff=lfs merge=lfs -text
 apache-openmeetings-3.0.7.tar.gz filter=lfs diff=lfs merge=lfs -text
+apache-openmeetings-5.0.0-M1.tar.gz filter=lfs diff=lfs merge=lfs -text
